United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7124239 [macosx] sun.awt.SunToolkit.InfiniteLoop exception in realSync called from SwingTestHelper
7124239 : [macosx] sun.awt.SunToolkit.InfiniteLoop exception in realSync called from SwingTestHelper

Details
Type:
Bug
Submit Date:
2011-12-23
Status:
Resolved
Updated Date:
2013-04-16
Project Name:
JDK
Resolved Date:
2012-09-24
Component:
client-libs
OS:
os_x
Sub-Component:
java.awt
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
8

Related Reports
Backport:
Relates:

Sub Tasks

Description
http://java.net/jira/browse/MACOSX_PORT-725 submitted 2011/11/18 by Yuri Nesterenko
Build: b217
closed/javax/swing/text/html/HTMLEditorKit/LinkNavigationTest/LinkNavigationTest.java
(attached)
This test fails in realSync() with InfiniteLoop exception.

                                    

Comments
URL:   http://hg.openjdk.java.net/jdk8/jdk8/jdk/rev/88048b34405e
User:  lana
Date:  2012-10-12 18:08:25 +0000

                                     
2012-10-12
EVALUATION

Author: Artem Ananiev Date: 13/Dec/11 10:28 AM
Could possibly be related to JDK bug #6421984.
                                     
2011-12-23



Hardware and Software, Engineered to Work Together